# useful_habits

./: .coverage  .env  .gitinore  pyproject.toml
config/: settings.py  urls.py
habits/: models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_time_alter_habit_user.py  0004_alter_habit_time.py  0005_alter_habit_time.py  0006_alter_habit_time.py  0007_alter_habit_time.py  0008_alter_habit_time.py  0009_alter_habit_time.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: ccsu.py
users/migrations/: 0001_initial.py  0002_user_telegram_id.py  0003_user_chat_id.py  0004_alter_user_chat_id.py  0005_alter_user_telegram_id.py
